Styling finished, bugs fixed

--- a/style.css
+++ b/style.css
@@ -3,10 +3,46 @@ body{
     margin:0;
 }
 
+
+#header{
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    background: linear-gradient(180deg, #0D3EEA 0%, #0085FF 100%);
+    color:white;
+    /* display: flex;
+    justify-content: center; */
+}
+
+#header p{
+    font-weight: 500;
+}
+
+#heading-container{
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-top:-3rem;
+    /* background-color: turquoise; */
+}
+
+#boldText{
+    margin-bottom: -.5rem;
+    /* font-weight: bold; */
+}
+
 #app{
-    max-width: 24rem;
-    margin: 0 auto;
-    padding: 1rem;
+    /* max-width: 20rem; */
+    margin: 1rem auto;
+    padding-top: 1rem;
+    padding-left: 7%;
+    padding-right: 7%;
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-top:-3rem;
+
+    background-color: white;
+    border: 1px solid #E0E0E0;
+    border-radius: 12px;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
 }
 
 #valueProp{
@@ -27,38 +63,40 @@ body{
 }
 
 button{
-    padding: .5rem;
-    border-radius: 5px;
+    padding: 1rem;
+    border-radius: 9999px;
     border: none;
-    background-color: #1E90FF;
+    background: linear-gradient(180deg, #0085FF 0%, #1757e2 100%);
     color: white;
     font-weight: bold;
+    font-size: 1.2rem;
     cursor: pointer;
 }
 
 button:hover{
-    background-color: #4169E1;
+    background: linear-gradient(180deg, #0161bb 0%, #103ea1 100%);
+}
+
+label{
+    /* font-size: .8rem; */
+    font-weight: 600;
+    /* margin-bottom: .5rem; */
 }
 
 input{
     padding: .5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     border-radius: 5px;
-    border: 1px solid #1E90FF;
+    border: 1px solid #E9E9E9;
     margin-bottom: 1rem;
 }
 
 h1{
-    text-align: center;
-}
-
-#header{
-    padding: .2rem;
-    background-color: #bed8f3;
-}
-
-#boldText{
-    margin-bottom: -.5rem;
-    font-weight: bold;
+    /* text-align: center; */
+    font-size: 3rem;
+    margin-bottom: -.6rem;
+    font-weight: 600;
 }
 
 #halfwayPointCoordinates{
@@ -66,9 +104,84 @@ h1{
 }
 
 #results{
-    visibility: hidden;
+    display: none;
+}
+
+#linkList{
+    display: none;
 }
 
 #viewHalfwayPoint{
-    font-size: .8rem;
+    display: inline-block;
+    padding: 15px 20px;
+    margin-top: 1rem;
+    margin-bottom: 1.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    /* background-color: #007bff */
+    color: #007bff;; /* Button text color */
+    text-decoration: none;
+    border-radius: 50px; /* Rounded corners */
+    border: 2px solid #007bff;
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth transition */
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    max-width: 20rem;
+}
+
+#viewHalfwayPoint:hover{
+    background-color: #007bff;
+    color: white;; /* Button text color */
+
+}
+
+.stickyBottomMenu{
+        display: flex;
+        justify-content: center;
+        background-color: white;
+        color: #fff;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        text-align: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        box-shadow: 0px -10px 8px #88888815;
+}
+
+.button-link {
+    display: inline-block;
+    padding: 15px 20px;
+    margin-bottom: .5rem;
+    /* background-color: #007bff */
+    color: #007bff;; /* Button text color */
+    text-decoration: none;
+    border-radius: 12px; /* Rounded corners */
+    border: 1px solid #007bff;
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth transition */
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-link:last-child{
+    margin-bottom: 10rem;
+}
+
+/* Hover effect */
+.button-link:hover {
+    background-color: #007bff;
+    color: white;; /* Button text color */
+}
+
+.button-link-icon{
+    
+}
+
+#linkList{
+    padding-left: 7%;
+    padding-right: 7%;
 }
