--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     color:white;
     /* display: flex;
     justify-content: center; */
+    
 }
 
 #header p{
@@ -31,14 +32,12 @@ body{
 
 #app{
     /* max-width: 20rem; */
-    margin: 1rem auto;
     padding-top: 1rem;
     padding-left: 7%;
     padding-right: 7%;
     margin-left: 7%;
     margin-right: 7%;
     margin-top:-3rem;
-
     background-color: white;
     border: 1px solid #E0E0E0;
     border-radius: 12px;
@@ -53,6 +52,8 @@ body{
     display: flex;
     flex-direction: column;
     margin-top: 1.5rem;
+    max-width: 65rem;
+    margin: 0 auto;
 }
 
 #form{
@@ -90,6 +91,7 @@ input{
     border-radius: 5px;
     border: 1px solid #E9E9E9;
     margin-bottom: 1rem;
+    box-shadow: inset 0 1px 5px rgba(0,0,0,.10), 0 -1px 1px #FFF, 0 1px 0 #FFF;
 }
 
 h1{
