--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     margin-left: 7%;
     margin-right: 7%;
     margin-top:-3rem;
+    margin-bottom: 10rem;
     background-color: white;
     border: 1px solid #E0E0E0;
     border-radius: 12px;
